[10.January 2009]
- menu/items/select.rb: change proc doesn't get indices but values;
  added methods 'choice' and 'choice=';
  method 'select' renamed to 'entered_item' (I frogot that method select
  is defined in Menu and is important - it's replacement was breaking mouse
  functionality);
  QuitButton added;
  special sign is shown next to selected item

[8.January 2009]
- menu/menu.rb: selector can be more than one line high if needed (accommodates
  to menu items)
- menu/items/select.rb: another way to choose from a set of items
- menu/menus.rb: testing part updated

[31.December 2008]
- menu/menu.rb, menu/menus.rb: changed system of attribute inheritance
  to a more useful and logical one

[17.November 2008]
- Menu.new optionally yields the new object (similar e.g. to File.open)